# arl

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
arl/: __init__.py
arl-backend/: .env.example  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start-dev.sh
arl-backend/app/: __init__.py  main.py
arl-backend/app/api/: router.py
arl-backend/app/api/endpoints/: agents.py  auth.py  cells.py  documents.py  exports.py  permissions.py  projects.py  sessions.py  teams.py
arl-backend/app/core/: config.py  database.py  redis.py  security.py  seeds.py  storage.py  websocket.py
arl-backend/app/models/: __init__.py  agent.py  cell.py  document.py  export.py  permission.py  project.py  session.py  team.py  user.py
arl-backend/app/schemas/: __init__.py  agent.py  cell.py  document.py  event.py  export.py  permission.py  project.py  session.py  team.py  user.py
arl-backend/app/services/: a2a_client.py  adk_agents.py  code_executor.py  event_service.py  export_service.py  session_orchestrator.py
arl-backend/migrations/: env.py
arl-backend/migrations/versions/: 001_initial_schema.py  002_add_username_and_fix_user_columns.py  27757269535a_fix_team_members_schema.py  7b54b4275a31_rename_teams_created_by_to_owner_id.py  add_session_agents_table.py  deae3535b65d_add_agents_and_sessions_tables.py
arl-backend/scripts/: apply_user_schema_fix.py  fix_schema_direct.py  fix_user_schema.sql
arl-backend/tests/: test_exports.py
arl-frontend/: .env.example  Dockerfile.production  bun.lockb  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
arl-frontend/src/: routes.tsx
arl-frontend/src/api/: agents.ts  annotations.ts  auth.ts  canvas.ts  documents.ts  exports.ts  oauth.ts  permissions.ts  profile.ts  sessions.ts  teams.ts
arl-frontend/src/components/: ProtectedRoute.tsx  ShareDialog.tsx  UserMenu.tsx
arl-frontend/src/hooks/: useKeyboardNav.ts  useTouch.ts  useWebSocket.ts
arl-frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx
arl-frontend/src/pages/: AgentsSettingsPage.tsx  CanvasPage.tsx  DashboardPage.tsx  DocumentViewerPage.tsx  DocumentsLandingPage.tsx  DocumentsPage.tsx  LoginPage.tsx  OAuthCallbackPage.tsx  ProfilePage.tsx  (+7 more)
arl/a2a/: __init__.py  agent_cards.py  client.py  server.py
arl/cli/: a2a_commands.py  main.py  paper_commands.py  project_commands.py  research_commands.py  session_commands.py
arl/config/: a2a_config.py  llm_config.py  settings.py
arl/storage/: database.py  models.py
docs/: a2a-protocol.md  architecture.md  azure-setup.md  frontend-development.md  installation.md  quickstart.md  research_workflow_guide.md  testing.md  user-guide.md
examples/: README.md  example_01_quick_start.py  example_02_paper_ingestion.py  example_04_complete_workflow.py  example_05_cli_workflow.sh
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  grafana-dashboards.json  grafana-deployment.yaml  ingress.yaml  namespace.yaml  postgres-statefulset.yaml  prometheus-deployment.yaml  redis-deployment.yaml
scripts/: build_sandbox.sh  debug_llm_call.py  test_cli_config.sh  test_dynamic_deps.py  test_execution_agent.py  test_llm_config.py  test_sandbox.py  test_xgboost.py
tests/: __init__.py  test_a2a_integration.py  test_research_workflow.py
(+88 files in other folders)
